# face_recognition_train

./: .gitignore  LICENSE  README.md  eval_edgeface.py  flops.py  pyproject.toml  train_v2.py  train_v2_restart.py
backbones/: __init__.py  timmfr.py
checkpoints/: edgeface_xs_q.pt  edgeface_xxs_q.pt
configs/: edgeface_s_gamma_05.py  edgeface_s_gamma_05_restart.py  edgeface_xs_gamma_06.py  edgeface_xs_gamma_06_restart.py
